// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MasterCustomer Component > MasterCustomerComponent Snapshots > default state 1`] = `
<DocumentFragment>
  <div
    data-testid="mock-layout"
  >
    <div
      class="flex flex-col h-full pb-18 lg:pb-0 px-3 lg:px-0 lg:-mt-4 relative"
    >
      <div
        class="flex items-center justify-between py-2 mb-1 lg:mb-4 relative"
      >
        <button
          aria-label="Back"
          class="w-11 h-11 rounded-full bg-[#F4F4F5] hover:bg-[#E9E9EB] active:scale-95 transition-all flex items-center justify-center text-black shrink-0"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.4"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M19 12H5"
            />
            <path
              d="M12 19 5 12l7-7"
            />
          </svg>
        </button>
        <h1
          class="flex-1 text-center text-[17px] font-semibold text-black tracking-tight px-2 truncate"
        >
          Customer List
        </h1>
        <div
          class="relative shrink-0"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="More options"
            class="w-11 h-11 rounded-full bg-[#F4F4F5] hover:bg-[#E9E9EB] active:scale-95 transition-all flex items-center justify-center text-black"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
            >
              <circle
                cx="5"
                cy="12"
                r="1.8"
              />
              <circle
                cx="12"
                cy="12"
                r="1.8"
              />
              <circle
                cx="19"
                cy="12"
                r="1.8"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="md:hidden space-y-6 mt-10"
      >
        <div
          class="relative mb-3"
        >
          <span
            class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none text-brand-text-medium scale-125"
          >
            <div
              data-testid="search-icon"
            />
          </span>
          <input
            class="w-full pl-12 pr-6 py-3.5 bg-brand-gray-light border-none rounded-full text-xl font-medium focus:outline-none focus:ring-1 focus:ring-brand-blue/20 placeholder:text-brand-text-medium text-brand-text-dark"
            placeholder="Search"
            type="text"
          />
        </div>
        <div
          class="scale-100 origin-top"
        >
          <div
            class="bg-transparent overflow-hidden divide-y divide-brand-gray-light"
          >
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  PT Mega Jaya Abadi
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Sudirman No. 45, Jakarta Pusat
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  CV Sinar Terang
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Gatot Subroto No. 12, Bandung
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  Budi Santoso
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Diponegoro No. 88, Surabaya
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-red-100 text-red-700"
                >
                  inactive
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  PT Nusantara Prima
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. M.H. Thamrin No. 9, Jakarta Pusat
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  Dewi Lestari
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Malioboro No. 23, Yogyakarta
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  CV Berkah Mandiri
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Pemuda No. 101, Semarang
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-red-100 text-red-700"
                >
                  inactive
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  PT Cipta Karya Solusi
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Raya Bogor KM 28, Depok
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  Ahmad Fauzi
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Ahmad Yani No. 50, Medan
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  PT Global Indo Medika
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. HR Rasuna Said Kav. C-22, Jakarta Selatan
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-red-100 text-red-700"
                >
                  inactive
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  Siti Rahmawati
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Gajah Mada No. 14, Denpasar
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pt-4 flex items-center justify-between"
        >
          <div
            class="flex items-center gap-3 text-sm text-brand-text-medium shrink-0"
          >
            Showing
            <select
              class="border border-brand-gray-light rounded px-2 py-1 bg-brand-white font-medium text-brand-text-dark focus:outline-none"
            >
              <option
                value="5"
              >
                5
              </option>
              <option
                value="10"
              >
                10
              </option>
              <option
                value="20"
              >
                20
              </option>
              <option
                value="50"
              >
                50
              </option>
              <option
                value="100"
              >
                100
              </option>
            </select>
            of 10 results
          </div>
          <div
            class="flex items-center justify-center gap-2 text-sm text-brand-text-medium font-medium "
          >
            <button
              class="p-1 rounded text-gray-300 cursor-not-allowed"
              disabled=""
            >
              &lt;
            </button>
            <button
              class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-brand-blue text-brand-white font-bold"
            >
              1
            </button>
            <button
              class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-brand-gray-light text-brand-text-dark"
            >
              2
            </button>
            <button
              class="p-1 rounded text-brand-text-medium hover:text-brand-text-dark hover:bg-brand-gray-light"
            >
              &gt;
            </button>
          </div>
        </div>
      </div>
      <div
        class="hidden md:flex bg-brand-white rounded-xl border border-brand-gray-light shadow-sm flex-col flex-1 overflow-hidden mt-6"
      >
        <div
          class="flex items-center justify-between p-5 px-6 border-b border-brand-gray-light"
        >
          <div
            class="relative"
          >
            <div
              class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-brand-text-medium"
            >
              <div
                data-testid="search-icon"
              />
            </div>
            <input
              class="w-64 pl-10 pr-4 py-2 bg-brand-gray-light border-none rounded-lg text-sm focus:outline-none placeholder:text-brand-text-medium text-brand-text-dark"
              placeholder="Search customer"
              type="text"
            />
          </div>
          <div
            class="flex items-center gap-3 text-sm text-brand-text-medium "
          >
            Showing
            <select
              class="border border-brand-gray-light rounded px-2 py-1 bg-brand-white font-medium text-brand-text-dark focus:outline-none"
            >
              <option
                value="5"
              >
                5
              </option>
              <option
                value="10"
              >
                10
              </option>
              <option
                value="20"
              >
                20
              </option>
              <option
                value="50"
              >
                50
              </option>
              <option
                value="100"
              >
                100
              </option>
            </select>
            of 10 results
          </div>
        </div>
        <div
          class="flex-1 overflow-auto"
        >
          <div
            class="w-full overflow-x-auto"
          >
            <table
              class="w-full whitespace-nowrap"
            >
              <thead>
                <tr
                  class="bg-brand-gray-light border-b border-brand-gray-light"
                >
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    No
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Customer Name
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Address
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Phone Number
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Status
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Action
                  </th>
                </tr>
              </thead>
              <tbody
                class="divide-y divide-brand-gray-light"
              >
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    PT Mega Jaya Abadi
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Sudirman No. 45, Jakarta Pusat
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081234567890
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    CV Sinar Terang
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Gatot Subroto No. 12, Bandung
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081298765432
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Budi Santoso
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Diponegoro No. 88, Surabaya
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    085612345678
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    inactive
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    PT Nusantara Prima
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. M.H. Thamrin No. 9, Jakarta Pusat
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081377889900
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Dewi Lestari
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Malioboro No. 23, Yogyakarta
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    087811223344
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    CV Berkah Mandiri
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Pemuda No. 101, Semarang
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    082155667788
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    inactive
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    PT Cipta Karya Solusi
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Raya Bogor KM 28, Depok
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081900112233
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Ahmad Fauzi
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Ahmad Yani No. 50, Medan
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    085244332211
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    PT Global Indo Medika
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. HR Rasuna Said Kav. C-22, Jakarta Selatan
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081199887766
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    inactive
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Siti Rahmawati
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Gajah Mada No. 14, Denpasar
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    083812349988
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="flex items-center justify-center gap-2 text-sm text-brand-text-medium font-medium "
        >
          <button
            class="p-1 rounded text-gray-300 cursor-not-allowed"
            disabled=""
          >
            &lt;
          </button>
          <button
            class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-brand-blue text-brand-white font-bold"
          >
            1
          </button>
          <button
            class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-brand-gray-light text-brand-text-dark"
          >
            2
          </button>
          <button
            class="p-1 rounded text-brand-text-medium hover:text-brand-text-dark hover:bg-brand-gray-light"
          >
            &gt;
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MasterCustomer Component > MasterCustomerComponent Snapshots > more open state 1`] = `
<DocumentFragment>
  <div
    data-testid="mock-layout"
  >
    <div
      class="flex flex-col h-full pb-18 lg:pb-0 px-3 lg:px-0 lg:-mt-4 relative"
    >
      <div
        class="flex items-center justify-between py-2 mb-1 lg:mb-4 relative"
      >
        <button
          aria-label="Back"
          class="w-11 h-11 rounded-full bg-[#F4F4F5] hover:bg-[#E9E9EB] active:scale-95 transition-all flex items-center justify-center text-black shrink-0"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.4"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M19 12H5"
            />
            <path
              d="M12 19 5 12l7-7"
            />
          </svg>
        </button>
        <h1
          class="flex-1 text-center text-[17px] font-semibold text-black tracking-tight px-2 truncate"
        >
          Customer List
        </h1>
        <div
          class="relative shrink-0"
        >
          <button
            aria-expanded="true"
            aria-haspopup="menu"
            aria-label="More options"
            class="w-11 h-11 rounded-full bg-[#F4F4F5] hover:bg-[#E9E9EB] active:scale-95 transition-all flex items-center justify-center text-black"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
            >
              <circle
                cx="5"
                cy="12"
                r="1.8"
              />
              <circle
                cx="12"
                cy="12"
                r="1.8"
              />
              <circle
                cx="19"
                cy="12"
                r="1.8"
              />
            </svg>
          </button>
          <button
            aria-label="Close menu"
            class="fixed inset-0 z-10 cursor-default"
            tabindex="-1"
            type="button"
          />
          <div
            class="absolute right-0 top-[calc(100%+8px)] z-20 w-52 rounded-2xl border border-gray-100 bg-white py-2 shadow-xl overflow-hidden"
            role="menu"
          >
            <button
              class="w-full flex items-center gap-3 px-4 py-3 text-left text-[14px] font-medium text-gray-800 hover:bg-gray-50 transition-colors"
              role="menuitem"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
              >
                <path
                  d="M12 5v14"
                />
                <path
                  d="M5 12h14"
                />
              </svg>
              New Customer
            </button>
            <div
              class="mx-3 my-1 h-px bg-gray-100"
              role="separator"
            />
            <button
              class="w-full flex items-center gap-3 px-4 py-3 text-left text-[14px] font-medium text-red-600 hover:bg-red-50 transition-colors"
              role="menuitem"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
              >
                <polyline
                  points="3 6 5 6 21 6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
              Delete
            </button>
          </div>
        </div>
      </div>
      <div
        class="md:hidden space-y-6 mt-10"
      >
        <div
          class="relative mb-3"
        >
          <span
            class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none text-brand-text-medium scale-125"
          >
            <div
              data-testid="search-icon"
            />
          </span>
          <input
            class="w-full pl-12 pr-6 py-3.5 bg-brand-gray-light border-none rounded-full text-xl font-medium focus:outline-none focus:ring-1 focus:ring-brand-blue/20 placeholder:text-brand-text-medium text-brand-text-dark"
            placeholder="Search"
            type="text"
          />
        </div>
        <div
          class="scale-100 origin-top"
        >
          <div
            class="bg-transparent overflow-hidden divide-y divide-brand-gray-light"
          >
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  PT Mega Jaya Abadi
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Sudirman No. 45, Jakarta Pusat
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  CV Sinar Terang
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Gatot Subroto No. 12, Bandung
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  Budi Santoso
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Diponegoro No. 88, Surabaya
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-red-100 text-red-700"
                >
                  inactive
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  PT Nusantara Prima
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. M.H. Thamrin No. 9, Jakarta Pusat
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  Dewi Lestari
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Malioboro No. 23, Yogyakarta
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  CV Berkah Mandiri
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Pemuda No. 101, Semarang
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-red-100 text-red-700"
                >
                  inactive
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  PT Cipta Karya Solusi
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Raya Bogor KM 28, Depok
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  Ahmad Fauzi
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Ahmad Yani No. 50, Medan
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  PT Global Indo Medika
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. HR Rasuna Said Kav. C-22, Jakarta Selatan
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-red-100 text-red-700"
                >
                  inactive
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-4 px-0 py-4 bg-transparent border-b border-brand-gray-light last:border-b-0 active:bg-brand-gray-light/20 transition-colors cursor-pointer"
              role="button"
              tabindex="0"
            >
              <div
                class="flex-1 min-w-0 space-y-1"
              >
                <p
                  class="text-xl font-semibold text-brand-text-dark leading-snug truncate"
                >
                  Siti Rahmawati
                </p>
                <p
                  class="text-base font-normal text-brand-text-medium/80 truncate"
                >
                  Jl. Gajah Mada No. 14, Denpasar
                </p>
              </div>
              <div
                class="shrink-0"
              >
                <span
                  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-medium whitespace-nowrap bg-green-100 text-green-700"
                >
                  active
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pt-4 flex items-center justify-between"
        >
          <div
            class="flex items-center gap-3 text-sm text-brand-text-medium shrink-0"
          >
            Showing
            <select
              class="border border-brand-gray-light rounded px-2 py-1 bg-brand-white font-medium text-brand-text-dark focus:outline-none"
            >
              <option
                value="5"
              >
                5
              </option>
              <option
                value="10"
              >
                10
              </option>
              <option
                value="20"
              >
                20
              </option>
              <option
                value="50"
              >
                50
              </option>
              <option
                value="100"
              >
                100
              </option>
            </select>
            of 10 results
          </div>
          <div
            class="flex items-center justify-center gap-2 text-sm text-brand-text-medium font-medium "
          >
            <button
              class="p-1 rounded text-gray-300 cursor-not-allowed"
              disabled=""
            >
              &lt;
            </button>
            <button
              class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-brand-blue text-brand-white font-bold"
            >
              1
            </button>
            <button
              class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-brand-gray-light text-brand-text-dark"
            >
              2
            </button>
            <button
              class="p-1 rounded text-brand-text-medium hover:text-brand-text-dark hover:bg-brand-gray-light"
            >
              &gt;
            </button>
          </div>
        </div>
      </div>
      <div
        class="hidden md:flex bg-brand-white rounded-xl border border-brand-gray-light shadow-sm flex-col flex-1 overflow-hidden mt-6"
      >
        <div
          class="flex items-center justify-between p-5 px-6 border-b border-brand-gray-light"
        >
          <div
            class="relative"
          >
            <div
              class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-brand-text-medium"
            >
              <div
                data-testid="search-icon"
              />
            </div>
            <input
              class="w-64 pl-10 pr-4 py-2 bg-brand-gray-light border-none rounded-lg text-sm focus:outline-none placeholder:text-brand-text-medium text-brand-text-dark"
              placeholder="Search customer"
              type="text"
            />
          </div>
          <div
            class="flex items-center gap-3 text-sm text-brand-text-medium "
          >
            Showing
            <select
              class="border border-brand-gray-light rounded px-2 py-1 bg-brand-white font-medium text-brand-text-dark focus:outline-none"
            >
              <option
                value="5"
              >
                5
              </option>
              <option
                value="10"
              >
                10
              </option>
              <option
                value="20"
              >
                20
              </option>
              <option
                value="50"
              >
                50
              </option>
              <option
                value="100"
              >
                100
              </option>
            </select>
            of 10 results
          </div>
        </div>
        <div
          class="flex-1 overflow-auto"
        >
          <div
            class="w-full overflow-x-auto"
          >
            <table
              class="w-full whitespace-nowrap"
            >
              <thead>
                <tr
                  class="bg-brand-gray-light border-b border-brand-gray-light"
                >
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    No
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Customer Name
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Address
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Phone Number
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Status
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-bold text-brand-text-medium uppercase tracking-wider text-left"
                  >
                    Action
                  </th>
                </tr>
              </thead>
              <tbody
                class="divide-y divide-brand-gray-light"
              >
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    PT Mega Jaya Abadi
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Sudirman No. 45, Jakarta Pusat
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081234567890
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    CV Sinar Terang
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Gatot Subroto No. 12, Bandung
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081298765432
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Budi Santoso
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Diponegoro No. 88, Surabaya
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    085612345678
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    inactive
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    PT Nusantara Prima
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. M.H. Thamrin No. 9, Jakarta Pusat
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081377889900
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Dewi Lestari
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Malioboro No. 23, Yogyakarta
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    087811223344
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    CV Berkah Mandiri
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Pemuda No. 101, Semarang
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    082155667788
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    inactive
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    PT Cipta Karya Solusi
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Raya Bogor KM 28, Depok
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081900112233
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Ahmad Fauzi
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Ahmad Yani No. 50, Medan
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    085244332211
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    PT Global Indo Medika
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. HR Rasuna Said Kav. C-22, Jakarta Selatan
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    081199887766
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    inactive
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
                <tr
                  class="hover:bg-brand-gray-light/50 transition-colors group cursor-pointer"
                >
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Siti Rahmawati
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    Jl. Gajah Mada No. 14, Denpasar
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    083812349988
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  >
                    active
                  </td>
                  <td
                    class="px-6 py-4 border-b border-brand-gray-light text-left"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="flex items-center justify-center gap-2 text-sm text-brand-text-medium font-medium "
        >
          <button
            class="p-1 rounded text-gray-300 cursor-not-allowed"
            disabled=""
          >
            &lt;
          </button>
          <button
            class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors bg-brand-blue text-brand-white font-bold"
          >
            1
          </button>
          <button
            class="w-8 h-8 flex items-center justify-center rounded-lg transition-colors hover:bg-brand-gray-light text-brand-text-dark"
          >
            2
          </button>
          <button
            class="p-1 rounded text-brand-text-medium hover:text-brand-text-dark hover:bg-brand-gray-light"
          >
            &gt;
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
